# ecm-studio

./: .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  PRD-v1.0.md  README.md  ecm_studio_view_designer_prd.md  pyproject.toml
.agents/skills/ecm-bulk-change-planner/: SKILL.md
.agents/skills/ecm-capability-manager/: SKILL.md
.agents/skills/ecm-capability-manager/evals/: evals.json
.agents/skills/ecm-capability-manager/references/: repo-contract.md
.agents/skills/ecm-governance-auditor/: SKILL.md
.agents/skills/ecm-impact-analyzer/: SKILL.md
.agents/skills/ecm-import-mapper/: SKILL.md
.agents/skills/ecm-model-diff-summarizer/: SKILL.md
.agents/skills/ecm-model-quality-reviewer/: SKILL.md
.agents/skills/ecm-model-validator/: SKILL.md
.agents/skills/ecm-release-preparer/: SKILL.md
.github/: copilot-instructions.md
.github/workflows/: publish.yml
demos/: README.md  stress-model-summary.json
demos/stress-workspace/: .gitignore  capability-map.html  ecm-studio.json
demos/stress-workspace/ecm/: capabilities.jsonl  capability_versions.jsonl
packaging/: ecms.spec  ecmw.spec
scripts/: rebuild-packaged-ui.ps1  release.py
src/ecm_studio/: __init__.py  cli.py
src/ecm_studio/application/: context.py  results.py  services.py
src/ecm_studio/desktop/: app.py  bridge.py  theme.py  windows_shortcut.py
src/ecm_studio/domain/: capabilities.py  errors.py  models.py
src/ecm_studio/infrastructure/: events.py  exports.py  git_service.py  github_release.py  jsonl.py  model_io.py  paths.py  repository.py  settings.py  sqlite_projection.py  workspace.py
src/ecm_workbench/: cli.py
src/ecm_workbench/application/: context.py  results.py  services.py
src/ecm_workbench/desktop/: app.py  bridge.py
src/ecm_workbench/domain/: capabilities.py  errors.py  models.py
src/ecm_workbench/infrastructure/: exports.py  git_service.py  jsonl.py  model_io.py  paths.py  repository.py  settings.py  sqlite_projection.py  workspace.py
tests/: test_app_info.py  test_bridge_map_export.py  test_domain_capabilities.py  test_ecm_skill_helper.py  test_git_service.py  test_jsonl.py  test_model_io.py  test_package_release.py  test_release_workflow.py  test_settings.py  test_sqlite_projection.py  test_vertical_slice.py  test_windows_shortcut.py  test_workspace_skills.py
ui/: biome.json  index.html  package-lock.json  package.json  vite.config.ts
ui/public/: site.webmanifest
ui/src/: App.tsx  capability-map-settings.ts  styles.css
ui/src/api/: bridge.test.ts  bridge.ts  types.ts
ui/src/components/: AppMenu.tsx  CapabilityMapPanel.tsx  CapabilityPanels.test.ts  CapabilityPanels.tsx  DockviewTab.tsx  GitBadges.tsx  GroupHeaderActions.tsx  StatusBar.tsx  StudioLayout.tsx  WorkbenchLayout.tsx  WorkspacePanels.tsx  capability-map-export.test.ts  capability-map-export.ts  capability-map-layout.test.ts  capability-map-layout.ts  capability-tree-utils.test.ts  capability-tree-utils.ts  git-state.test.ts  git-state.ts
ui/src/fonts/: NOTICES.md
ui/src/notifications/: NotificationCenter.tsx  ToastHost.tsx  notification-actions.ts  notification-store.test.ts  notification-store.ts  notify.ts
ui/src/store/: app-store.test.ts  app-store.ts  layout-persistence.test.ts  layout-persistence.ts  layout-store.test.ts  layout-store.ts  settings-store.ts
ui/src/tasks/: BlockingTaskDialog.tsx  blocking-task-store.test.ts  blocking-task-store.ts  git-blocking-tasks.test.ts  git-blocking-tasks.ts
ui/src/workspace/: workspace-refresh.test.ts  workspace-refresh.ts
(+19 files in other folders)
