[build-system]
requires = ["hatchling>=1.27"]
build-backend = "hatchling.build"

[project]
name = "ecm-studio"
dynamic = ["version"]
description = "Desktop-first Enterprise Capability Model studio with Git-managed JSONL storage."
readme = "README.md"
requires-python = ">=3.13"
license = "MIT"
license-files = ["LICENSE"]
authors = [{ name = "Thomas Klok Rohde" }]
keywords = ["enterprise-architecture", "capability-model", "desktop", "git", "jsonl", "sqlite"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Win32 (MS Windows)",
    "Intended Audience :: End Users/Desktop",
    "Operating System :: Microsoft :: Windows :: Windows 10",
    "Operating System :: Microsoft :: Windows :: Windows 11",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.13",
]
dependencies = [
    "pywebview>=5.4",
    "pydantic>=2.10",
    "platformdirs>=4.3",
    "watchfiles>=1.0",
    'pywin32>=308; sys_platform == "win32"',
]

[project.optional-dependencies]
dev = [
    "build>=1.2",
    "hatch>=1.14",
    "pytest>=8.3",
    "pytest-cov>=6.0",
    "ruff>=0.8",
    "twine>=6.1",
    "pyinstaller>=6.11",
]

[project.gui-scripts]
ecms = "ecm_studio.cli:main"

[project.urls]
Homepage = "https://github.com/ThomasRohde/ecm-studio"
Issues = "https://github.com/ThomasRohde/ecm-studio/issues"
Changelog = "https://github.com/ThomasRohde/ecm-studio/blob/main/CHANGELOG.md"

[tool.hatch.version]
path = "src/ecm_studio/__init__.py"

[tool.hatch.build.targets.wheel]
packages = ["src/ecm_studio"]
artifacts = ["src/ecm_studio/assets/**"]

[tool.hatch.build.targets.sdist]
include = ["src/ecm_studio", "README.md", "LICENSE", "CHANGELOG.md", "screenshot.png"]

[tool.ruff]
line-length = 100
target-version = "py313"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "SIM", "RUF"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
